2004-02-08  Joseph S. Myers  <jsm@polyomino.org.uk>

	* countmail/countmail.6, phantasia/fight.c, phantasia/io.c,
	sail/extern.h, sail/misc.c, snake/snake/snake.c: Update from
	NetBSD CVS.

2004-01-27  Joseph S. Myers  <jsm@polyomino.org.uk>

	* dab/.cvsignore: New file.

	* Makeconfig.in: Add STRLCPY_DEFS and GETPROGNAME_DEFS.
	* arithmetic/Makefrag, fortune/fortune/Makefrag, rogue/Makefrag:
	Use them.

	* dm/utmpentry.c, dm/utmpentry.h: New from NetBSD CVS of
	usr.bin/who.
	* COPYING: Update.
	* dm/dm.c: Follow NetBSD in use of this utmp handling.
	* dm/Makefrag: Update.
	* exec.objs: Update.

	* lib/getprogname.c: New file.
	* include/stdlib.h: Update.
	* configure: Check for getprogname.
	* arithmetic/arithmetic.c, fortune/fortune/fortune.c: Follow
	NetBSD in use of getprogname().
	* exec.objs: Update.

	* adventure/extern.h, adventure/main.c, arithmetic/arithmetic.c,
	atc/extern.h, atc/input.c, backgammon/backgammon/backlocal.h,
	backgammon/backgammon/move.c, backgammon/common_source/back.h,
	backgammon/teachgammon/tutor.h, banner/banner.c,
	battlestar/battlestar.c, battlestar/extern.h, battlestar/fly.c,
	battlestar/init.c, battlestar/parse.c, bcd/bcd.c,
	boggle/boggle/bog.c, boggle/boggle/extern.h, boggle/boggle/mach.c,
	boggle/boggle/prtable.c, boggle/boggle/timer.c, caesar/caesar.c,
	canfield/canfield/canfield.c, canfield/cfscores/cfscores.c,
	cribbage/crib.c, cribbage/cribbage.h, dm/dm.c, fish/fish.c,
	fortune/fortune/fortune.c, fortune/unstr/unstr.c, gomoku/gomoku.h,
	gomoku/main.c, gomoku/pickmove.c, hack/def.func_tab.h,
	hack/extern.h, hack/hack.apply.c, hack/hack.do.c, hack/hack.h,
	hack/hack.invent.c, hack/hack.main.c, hack/hack.shk.c,
	hack/hack.vault.c, hack/hack.zap.c, hangman/hangman.h,
	hunt/hunt/hunt.c, hunt/hunt/otto.c, hunt/hunt/playit.c,
	hunt/huntd/driver.c, hunt/huntd/execute.c, hunt/huntd/expl.c,
	hunt/huntd/faketalk.c, hunt/huntd/hunt.h, hunt/huntd/makemaze.c,
	hunt/huntd/shots.c, hunt/huntd/talk_ctl.h, mille/mille.h,