@@ -1,7 +1,7 @@
 #!/bin/sh
 # tests/factor.test - test functionality of factor.
 #
-# Copyright (c) 1999, 2003 Joseph Samuel Myers.
+# Copyright (c) 1999, 2003, 2004 Joseph Samuel Myers.
 # All rights reserved.
 #
 # Redistribution and use in source and binary forms, with or without
@@ -65,5 +65,15 @@ if grep -q HAVE_OPENSSL include/bsd-games.h; then
     testno 6
     factor/factor 987654321987654321987 >test.out 2>&1 || failtest
     compare test.out tests/factor.987654321987654321987
+    rm -f test.out
+
+    testno 7
+    factor/factor 99999999999991 >test.out 2>&1 || failtest
+    compare test.out tests/factor.99999999999991
+    rm -f test.out
+
+    testno 8
+    factor/factor 2147483647111311 >test.out 2>&1 || failtest
+    compare test.out tests/factor.2147483647111311
     rm -f test.out
 fi
